# cur_index

./: .cursorignore  .cursorrules  .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  deploy-hf.bat  environment.yml  front.bat  push-deploy.bat  pyproject.toml  requirements-hf.txt  requirements.txt  run.bat
.cursor/rules/: hf-deploy.mdc  incremental-confirm.mdc  zha-jinhua.mdc
app/: crud.py  database.py  main.py  models.py  schemas.py  schemas_rbac.py
app/core/: config.py  deps.py  http_logging.py  permissions.py  rate_limit.py  security.py
app/crud/: __init__.py  document_corpora.py  insight.py  insight_data.py  modules.py
app/db_migrations/: 001_permissions_schema.py  002_ai_news_user_prefs.sql  002_complaints_indexes.sql  003_document_chunks_hnsw.py  003_document_chunks_hnsw.sql  004_ai_news_links.py  005_ai_news_links_seed.py  006_insight_tables.sql  007_insight_category_seed.py  008_insight_schema_v2.sql  009_insight_table_rename.py  010_insight_merge_complaints.py  011_insight_vector_dim_768.py  012_insight_samples_decouple_users.py  013_insight_survey_sample_fields.py  014_insight_three_layer.py  015_ai_news_hf_trending.py  015_app_error_logs.sql  016_document_corpora.py  017_chunk_section_varchar_500.py  018_corpus_chunk_tsvector.py
app/game_logic/: zha_jinhua.py
app/models/: __init__.py  insight.py  modules.py  ops.py  system.py
scripts/: check_vector.py  create_feature_intros.sql  migrate_document_chunks_vector.py
vue-manage-system-master/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+265 files in other folders)
